integration of basic theme 01

--- a/packages/@examples/01-basic/src/css/index.css
+++ b/packages/@examples/01-basic/src/css/index.css
@@ -4,10 +4,14 @@
 @sugar.import ('./generic/**/*.css');
 
 /* Load custom views css */
+@sugar.view ('sugar.menu.generic');
+@sugar.view ('sugar.header.generic');
+@sugar.view ('sugar.components.card');
 @sugar.view ('sugar.components.cards');
 @sugar.view ('sugar.sections.nude');
 @sugar.view ('sugar.sections.simple');
 @sugar.view ('sugar.sections.tile');
+@sugar.view ('sugar.sections.cards');
 @sugar.view ('sugar.sections.pushBlock');
 @sugar.view ('sugar.sections.testimonials');
 @sugar.view ('sugar.sections.hero');
