--- a/packages/@examples/01-basic/src/views/layouts/footer/footer.twig
+++ b/packages/@examples/01-basic/src/views/layouts/footer/footer.twig
@@ -1,4 +1,4 @@
-<footer class="footer">
+{# <footer class="footer">
     <div class="s-container">
         <div class="s-layout">
             <div>
@@ -18,4 +18,4 @@
             </div>
         </div>
     </div>
-</footer>
+</footer> #}
