--- a/packages/views/s-views/src/views/sugar/header/generic/generic.twig
+++ b/packages/views/s-views/src/views/sugar/header/generic/generic.twig
@@ -8,7 +8,7 @@
         <nav class="_primary-menu">
             {% include 'sugar/menu/generic/generic.twig' with {
                 id: 'primary-menu',
-                menu: primaryMenu
+                menu: menu.primary
             } %}
             <label for="primary-menu" class="_menu-toggle"></label>
         </nav>
