--- a/packages/views/s-views/src/views/sugar/sections/cards/cards.twig
+++ b/packages/views/s-views/src/views/sugar/sections/cards/cards.twig
@@ -5,9 +5,7 @@
 {% extends 'sugar/sections/simple/simple.twig' %}
 
 {% block simpleContent %}
-    
-    {% include 'sugar/components/cards/cards.twig' with {
-        cards: cards
-    } only %}
+
+    {% include 'sugar/components/cards/cards.twig' with {}|merge(cards) only %}
 
 {% endblock %}
