--- a/packages/views/s-views/src/views/sugar/sections/simple/simple.twig
+++ b/packages/views/s-views/src/views/sugar/sections/simple/simple.twig
@@ -7,18 +7,9 @@
 
 {% block content %}
 
-    <div class="{{ __spacingClasses(spacing, 30) }}">
+    {% include 'sugar/components/metas/metas.twig' %}
 
-        {% if title %}
-            <h1 class="_title s-typo:h2">{{ title|raw }}</h1>
-        {% endif %}
-        {% if intro %}
-            <p class="_lead s-typo:lead">{{ intro|raw }}</p>
-        {% endif %}
-        {% if text %}
-            <p class="_text s-typo:p">{{ text|raw }}</p>
-        {% endif %}
-
+    {% block simpleContent %}
         <div class="_content">
             {% if nodes %}
                 {{ nodes|join()|raw }}
@@ -26,22 +17,21 @@
                 {{ html|raw }}
             {% endif %}
         </div>
+    {% endblock %}
 
-        {% if primaryCta or secondaryCta %}
-            <div class="_ctas">
-                {% if primaryCta %}
-                    <div class="_cta _primary-cta">
-                        {% include 'sugar/components/cta/cta.twig' with primaryCta only %}
-                    </div>
-                {% endif %}
-                {% if secondaryCta %}
-                    <div class="_cta _secondary-cta">
-                        {% include 'sugar/components/cta/cta.twig' with secondaryCta only %}
-                    </div>
-                {% endif %}
-            </div>
-        {% endif %}
-
-    </div>
+    {% if primaryCta or secondaryCta %}
+        <div class="_ctas">
+            {% if primaryCta %}
+                <div class="_cta _primary-cta">
+                    {% include 'sugar/components/cta/cta.twig' with primaryCta only %}
+                </div>
+            {% endif %}
+            {% if secondaryCta %}
+                <div class="_cta _secondary-cta">
+                    {% include 'sugar/components/cta/cta.twig' with secondaryCta only %}
+                </div>
+            {% endif %}
+        </div>
+    {% endif %}
 
 {% endblock %}
