--- a/packages/views/s-views/src/views/sugar/sections/contact/contact.bare.css
+++ b/packages/views/s-views/src/views/sugar/sections/contact/contact.bare.css
@@ -1,19 +1,12 @@
-.section-contact {
-    background: sugar.color(main, background, --darken 5%);
-    padding-block: sugar.padding(80);
+.s-section-contact {
     position: relative;
 
-    @sugar.media mobile {
-        padding-block: 0 sugar.padding(50);
-        padding-inline: sugar.padding(30);
-    }
-
     ._layout {
-        @sugar.layout '1 2';
+        @sugar.layout '1 1 2 3 3';
         gap: sugar.margin(50);
 
         @sugar.media mobile {
-            @sugar.layout '1 _ 2';
+            @sugar.layout '1 _ 2 _ 3';
 
             > *:nth-child(2) {
                 display: none;
@@ -21,8 +14,11 @@
         }
     }
 
+    ._metas {
+        margin-block-end: sugar.margin(40);
+    }
+
     ._address {
-        @sugar.layout ('1 2 2 _ 3 3 3');
     }
 
     ._socials {
@@ -60,23 +56,5 @@
 
     .s-google-map-marker {
         @sugar.color (accent);
-    }
-
-    ._img {
-        position: absolute;
-        bottom: 0;
-        right: calc(50% - sugar.margin(100));
-        height: 800px;
-        transform: translateX(100%);
-        filter: drop-shadow(0 0 100px rgb(0, 0, 0, 0.3)) saturate(1.2);
-        transform-origin: 50% 100%;
-        @sugar.transition();
-    }
-
-    &:hover,
-    &:focus-within {
-        ._img {
-            transform: translateX(90%);
-        }
     }
 }
