--- a/packages/views/s-views/src/views/sugar/sections/pushBlock/pushBlock.twig
+++ b/packages/views/s-views/src/views/sugar/sections/pushBlock/pushBlock.twig
@@ -6,53 +6,39 @@
 
 {% block content %}
 
-    <div class="s-container">
-        <div class="_layout">
-            <div>
-                <div class="{{ __spacingClasses(spacing, 30) }}">
-                    {% if title %}
-                        <h1 class="s-typo s-typo-h3 _title">
-                            {{ title|raw }}
-                        </h1>
-                    {% endif %}
-                    {% if intro %}
-                        <p class="s-typo s-typo-lead _intro">
-                            {{ intro|raw }}
-                        </p>
-                    {% endif %}
-                    {% if text %}
-                        <p class="s-typo s-typo-p _text">
-                            {{ text|raw }}
-                        </p>
-                    {% endif %}
-                    {% if primaryCta or secondaryCta %}
-                        <div class="_ctas">
-                            {% if primaryCta %}
-                                <div class="_cta _primary-cta">
-                                    {% include 'sugar/components/cta/cta.twig' with primaryCta %}
-                                </div>
-                            {% endif %}
-                            {% if secondaryCta %}
-                                <div class="_cta _secondary-cta">
-                                    {% include 'sugar/components/cta/cta.twig' with secondaryCta %}
-                                </div>
-                            {% endif %}
-                        </div>
-                    {% endif %}
-                </div>                    
-            </div>
-            <div>
-                {% if image.url %}
-                    <div>
-                        <picture class="_image s-media-container">
-                            {% for media, image in image.media %}
-                                <source srcset="{{ image.url }}" media="{{ media }}">
-                            {% endfor %}
-                            <img class="_img s-media" src="{{ image.url }}" title="{{ image.title }}" alt="{{ image.alt }}" />
-                        </picture>
+    <div class="_layout">
+        <div>
+            <div class="{{ __spacingClasses(spacing, 30) }}">
+
+                {% include 'sugar/components/metas/metas.twig' %}
+
+                {% if primaryCta or secondaryCta %}
+                    <div class="_ctas">
+                        {% if primaryCta %}
+                            <div class="_cta _primary-cta">
+                                {% include 'sugar/components/cta/cta.twig' with primaryCta %}
+                            </div>
+                        {% endif %}
+                        {% if secondaryCta %}
+                            <div class="_cta _secondary-cta">
+                                {% include 'sugar/components/cta/cta.twig' with secondaryCta %}
+                            </div>
+                        {% endif %}
                     </div>
                 {% endif %}
-            </div>
+            </div>                    
+        </div>
+        <div>
+            {% if image.url %}
+                <div>
+                    <picture class="_image s-media-container">
+                        {% for media, image in image.media %}
+                            <source srcset="{{ image.url }}" media="{{ media }}">
+                        {% endfor %}
+                        <img class="_img s-media" src="{{ image.url }}" title="{{ image.title }}" alt="{{ image.alt }}" />
+                    </picture>
+                </div>
+            {% endif %}
         </div>
     </div>
 
