--- a/packages/views/s-views/src/views/sugar/sections/testimonials/testimonials.bare.css
+++ b/packages/views/s-views/src/views/sugar/sections/testimonials/testimonials.bare.css
@@ -27,4 +27,14 @@
         align-items: center;
         gap: sugar.margin(30);
     }
+
+    ._stars {
+        position: relative;
+
+        ._top {
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    }
 }
