--- a/packages/views/s-views/src/views/sugar/sections/testimonials/testimonials.twig
+++ b/packages/views/s-views/src/views/sugar/sections/testimonials/testimonials.twig
@@ -12,7 +12,21 @@
         {% for idx, testimonial in testimonials %}
             <li class="_testimonial {{ __spacingClasses(spacing, 30) }}">
                 {% if testimonial.rating %}
-                    <p class="_rating">{{ testimonial.rating }}</p>
+                    <div class="_rating">
+                        <p class="_score">{{ testimonial.rating }}</p>
+                        <div class="_stars" style="--percent: {{ 100 / testimonial.total * testimonial.rating }}">
+                            <div class="_base">
+                                {% for i in 0..testimonial.total - 1 %}
+                                    {{ testimonial.icon|raw }}
+                                {% endfor %}
+                            </div>
+                            <div class="_top">
+                                {% for i in 0..testimonial.total - 1 %}
+                                    {{ testimonial.icon|raw }}
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
                 {% endif %}
                 {% if testimonial.text %}
                     <p class="_text s-typo s-typo-lead">{{ testimonial.text }}</p>
