--- a/packages/views/s-views/src/views/sugar/sections/testimonials/testimonials.bare.css
+++ b/packages/views/s-views/src/views/sugar/sections/testimonials/testimonials.bare.css
@@ -31,7 +31,7 @@
     ._stars {
         position: relative;
 
-        ._top {
+        ._stars-rating {
             position: absolute;
             top: 0;
             left: 0;
