--- a/packages/views/s-views/src/views/sugar/components/richText/richText.twig
+++ b/packages/views/s-views/src/views/sugar/components/richText/richText.twig
@@ -1,4 +1,10 @@
-<div id="{{ id }}" class="s-rich-text {{ attributes.class }} {{ __spacesClasses(spaces, frontspec) }}" {{ __attrs(attributes, ['class'])|raw }}
+<div id="{{ id }}" class="s-rich-text
+    {{ __classes({
+        spaces: spaces
+    }) }}
+    {{ attributes.class }}
+    {{ additionalClasses }}
+" {{ __attrs(attributes, ['class'])|raw }}
 >
 {{ __nodeDataTemplate('views.components.richText', _context)|raw }}
     <div class="_content s-format-text {{ __spacingClasses(spacing, 30) }}">
