--- a/packages/views/s-views/src/views/sugar/components/slide/slide.twig
+++ b/packages/views/s-views/src/views/sugar/components/slide/slide.twig
@@ -1,3 +1,6 @@
-<div id="{{ id }}" s-slider-slide class="{{ attributes.class }}" {{ __attrs(attributes, ['class'])|raw }}>
+<div id="{{ id }}" s-slider-slide class="
+    {{ attributes.class }}
+    {{ additionalClasses }}
+" {{ __attrs(attributes, ['class'])|raw }}>
     {{ content|raw }}
 </div>
