--- a/packages/views/s-views/src/views/sugar/sections/nude/nude.bare.css
+++ b/packages/views/s-views/src/views/sugar/sections/nude/nude.bare.css
@@ -12,6 +12,13 @@
         flex-direction: column;
     }
 
+    ._backdrop-blur,
+    ._backdrop {
+        pointer-events: none;
+    }
+
+    ._backdrop-blur,
+    ._backdrop,
     ._bg {
         position: absolute;
         top: 0;
