--- a/packages/views/s-views/src/views/sugar/components/cta/cta.twig
+++ b/packages/views/s-views/src/views/sugar/components/cta/cta.twig
@@ -1,4 +1,10 @@
-<a id="{{ id }}" class="s-cta s-btn {{ lnf ? 's-btn-' ~ (lnf.value ? lnf.value : lnf) : '' }} {{ __colorClasses(color) }} {{ attributes.class }}" {{ __attrs(attributes, ['class'])|raw }}
+<a id="{{ id }}" class="s-cta s-btn {{ lnf ? 's-btn-' ~ (lnf.value ? lnf.value : lnf) : '' }}
+    {{ __classes({
+        color: color
+    }) }}
+    {{ attributes.class }}
+    {{ additionalClasses }}
+" {{ __attrs(attributes, ['class'])|raw }}
     href="{{ link.url }}"
     {% if link.newWindow %} target="_blank" {% endif %}
     color="{{ color.value }}"
