--- a/packages/views/s-views/src/views/sugar/sections/tile/tile.twig
+++ b/packages/views/s-views/src/views/sugar/sections/tile/tile.twig
@@ -28,18 +28,13 @@
                             {{ text|raw }}
                         </p>
                     {% endif %}
-                    {% if primaryCta or secondaryCta %}
+                   {% if ctas|length %}
                         <div class="_ctas">
-                            {% if primaryCta %}
-                                <div class="_cta _primary-cta">
-                                    {% include 'sugar/components/cta/cta.twig' with primaryCta %}
+                            {% for cta in ctas %}
+                                <div class="_cta">
+                                    {% include 'sugar/components/cta/cta.twig' with cta only %}
                                 </div>
-                            {% endif %}
-                            {% if secondaryCta %}
-                                <div class="_cta _secondary-cta">
-                                    {% include 'sugar/components/cta/cta.twig' with secondaryCta %}
-                                </div>
-                            {% endif %}
+                            {% endfor %}
                         </div>
                     {% endif %}
                 </div>                    
