--- a/packages/views/s-views/src/views/sugar/sections/contact/contact.bare.css
+++ b/packages/views/s-views/src/views/sugar/sections/contact/contact.bare.css
@@ -12,6 +12,11 @@
                 display: none;
             }
         }
+
+        &.left {
+            @sugar.layout '3 3 2 1 1';
+            gap: sugar.margin(50);
+        }
     }
 
     ._metas {
