--- a/packages/views/s-views/src/views/sugar/bare/container/container.twig
+++ b/packages/views/s-views/src/views/sugar/bare/container/container.twig
@@ -2,10 +2,10 @@
     __classes({
         container: type,
         spaces: spaces
-    })
+    }) }}
     {{ attributes.class }}
     {{ additionalClasses }}
-}}" {{ __attrs(attributes, ['class'])|raw }}>
+" {{ __attrs(attributes, ['class'])|raw }}>
     {{ __nodeDataTemplate('views.bare.container', _context)|raw }}
     {% if nodes %}
         {{ nodes|join()|raw }}
