--- a/packages/@websites/stylekit-coffeekraken-io/src/css/generic/s-code-example.css
+++ b/packages/@websites/stylekit-coffeekraken-io/src/css/generic/s-code-example.css
@@ -1,7 +1,8 @@
 .s-code-example {
     &_code,
     code {
-        background: none !important;
+        /* background: none !important; */
+        background: sugar.color(base, border, --alpha 0.02) !important;
     }
 
     &_content {
