--- a/packages/@websites/sugarcss-coffeekraken-io/src/css/generic/examples.css
+++ b/packages/@websites/sugarcss-coffeekraken-io/src/css/generic/examples.css
@@ -8,6 +8,8 @@
     ._sidebar {
         width: 400px;
         flex-shrink: 0;
+        position: relative;
+        top: s.margin(40);
         @s.border.radius();
 
         @s.media <=tablet {
@@ -64,7 +66,7 @@
     }
 
     .s-code-example {
-        min-height: 550px;
+        min-height: 570px;
     }
 
     ._content {
