--- a/packages/@websites/sugarcss-coffeekraken-io/src/views/sections/welcome/welcome.css
+++ b/packages/@websites/sugarcss-coffeekraken-io/src/views/sections/welcome/welcome.css
@@ -43,12 +43,20 @@
     ._title  {
         display: flex;
         gap: s.margin(30);
-        align-items: center;
+        align-items: end;
+        margin-block-end: s.margin(40);
     }
 
     .s-logo {
-        height: 40px;
-        margin-block-end: s.margin(30);
+        height: 90px;
+        position: relative;
+        top: -10px;
+        margin-inline-start: -26px;
+
+        [fill='black'] {
+            fill: s.color(accent);
+            stroke: s.color(accent);
+        }
     }
 
     ._content {
