--- a/packages/app/s-doc/src/css/s-doc-component.css
+++ b/packages/app/s-doc/src/css/s-doc-component.css
@@ -40,6 +40,7 @@ body:has(.s-doc-fullscreen) {
     &_content {
         position: relative;
         flex-grow: 1;
+        width: calc(100% - 400px);
     }
 
     &_body {
